--- a/html/accountMain.html
+++ b/html/accountMain.html
@@ -16,26 +16,30 @@
 	<header class="p-3 text-bg-dark">
 		<div class="container-fluid">
       		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        		<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-         	 		<li><a href="index.html" class="nav-link px-2 text-secondary">KOKOA BANK</a></li>
-          			<li><a href="accountMain.html" class="nav-link px-2 text-white">조회</a></li>
+        		<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 align-items-center">
+         	 		<li><a href="index.html" class="nav-link px-5 text-secondary fs-1">KOKOA BANK</a></li>
+          			<li><a href="accountMain.html" class="nav-link px-4 text-white fs-4">조회</a></li>
           			<li class="dropdown">
-          				<a href="#" class="nav-link px-2 text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
+          				<a href="#" class="nav-link px-4 text-white fs-4" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
           				<ul class="dropdown-menu" data-bs-theme="dark">
-          					<li><a class="dropdown-item" href="depositMain.html">입금</a></li>
-          					<li><a class="dropdown-item" href="depositTransfer.html">이체</a></li>
-          					<li><a class="dropdown-item" href="depositAutoTransfer.html">자동이체</a></li>
+          					<li><a class="dropdown-item fs-4" href="depositMain.html">입금</a></li>
+          					<li><a class="dropdown-item fs-4" href="depositTransfer.html">이체</a></li>
+          					<li><a class="dropdown-item fs-4" href="depositAutoTransfer.html">자동이체</a></li>
         				</ul>
           			</li>
-          			<li><a href="exchangeRate.html" class="nav-link px-2 text-white">환율</a></li>
+          			<li><a href="exchangeRate.html" class="nav-link px-4 text-white fs-4">환율</a></li>
           			<li class="dropdown">
-          				<a href="#" class="nav-link px-2 text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">주식</a>
+          				<a href="#" class="nav-link px-4 text-white fs-4" role="button" data-bs-toggle="dropdown" aria-expanded="false">주식</a>
           				<ul class="dropdown-menu" data-bs-theme="dark">
-        					<li><a class="dropdown-item" href="domesticStock.html">국내</a></li>
-          					<li><a class="dropdown-item" href="foreignStock.html">해외</a></li>
+        					<li><a class="dropdown-item fs-4" href="domesticStock.html">국내</a></li>
+          					<li><a class="dropdown-item fs-4" href="foreignStock.html">해외</a></li>
         				</ul>
           			</li>
         		</ul>
+        		<div class="text-end">
+          			<button type="button" class="btn text-white fs-4 px-4" data-bs-toggle="modal" data-bs-target="#signIn" id="btnSignin">로그인</button>
+					<button type="button" class="btn text-white fs-4 px-4" data-bs-toggle="modal" data-bs-target="#signUp" id="btnSignup">회원가입</button>	
+        		</div>
       		</div>
     	</div>
 	</header>
