--- a/html/index.html
+++ b/html/index.html
@@ -12,41 +12,48 @@
 	<header class="p-3 text-bg-dark">
 		<div class="container-fluid">
       		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        		<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-         	 		<li><a href="index.html" class="nav-link px-2 text-secondary">KOKOA BANK</a></li>
-          			<li><a href="accountMain.html" class="nav-link px-2 text-white">조회</a></li>
+        		<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 align-items-center">
+         	 		<li><a href="index.html" class="nav-link px-5 text-secondary fs-1">KOKOA BANK</a></li>
+          			<li><a href="accountMain.html" class="nav-link px-4 text-white fs-4">조회</a></li>
           			<li class="dropdown">
-          				<a href="#" class="nav-link px-2 text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
+          				<a href="#" class="nav-link px-4 text-white fs-4" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
           				<ul class="dropdown-menu" data-bs-theme="dark">
-          					<li><a class="dropdown-item" href="depositMain.html">입금</a></li>
-          					<li><a class="dropdown-item" href="depositTransfer.html">이체</a></li>
-          					<li><a class="dropdown-item" href="depositAutoTransfer.html">자동이체</a></li>
+          					<li><a class="dropdown-item fs-4" href="depositMain.html">입금</a></li>
+          					<li><a class="dropdown-item fs-4" href="depositTransfer.html">이체</a></li>
+          					<li><a class="dropdown-item fs-4" href="depositAutoTransfer.html">자동이체</a></li>
         				</ul>
           			</li>
-          			<li><a href="exchangeRate.html" class="nav-link px-2 text-white">환율</a></li>
+          			<li><a href="exchangeRate.html" class="nav-link px-4 text-white fs-4">환율</a></li>
           			<li class="dropdown">
-          				<a href="#" class="nav-link px-2 text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">주식</a>
+          				<a href="#" class="nav-link px-4 text-white fs-4" role="button" data-bs-toggle="dropdown" aria-expanded="false">주식</a>
           				<ul class="dropdown-menu" data-bs-theme="dark">
-        					<li><a class="dropdown-item" href="domesticStock.html">국내</a></li>
-          					<li><a class="dropdown-item" href="foreignStock.html">해외</a></li>
+        					<li><a class="dropdown-item fs-4" href="domesticStock.html">국내</a></li>
+          					<li><a class="dropdown-item fs-4" href="foreignStock.html">해외</a></li>
         				</ul>
           			</li>
         		</ul>
         		<div class="text-end">
-          			<button type="button" class="btn text-white" data-bs-toggle="modal" data-bs-target="#signIn" id="btnSignin">로그인</button>
-					<button type="button" class="btn text-white" data-bs-toggle="modal" data-bs-target="#signUp" id="btnSignup">회원가입</button>	
+          			<button type="button" class="btn text-white fs-4 px-4" data-bs-toggle="modal" data-bs-target="#signIn" id="btnSignin">로그인</button>
+					<button type="button" class="btn text-white fs-4 px-4" data-bs-toggle="modal" data-bs-target="#signUp" id="btnSignup">회원가입</button>	
         		</div>
       		</div>
     	</div>
 	</header>
 	<div class="container-fluid">
-		<div class="h4 d-flex justify-content-center" style="margin-top: 50px;">인플루언서</div>
 		<div class="row">
-			<div class="d-flex justify-content-center" style="padding: 33px; height: 900px;">
-				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/9NyxcX3rhQs?controls=0?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			<div class="d-flex justify-content-center" style="padding: 33px; height: 600px;">
+				<iframe width="1200" height="100%" src="https://www.youtube.com/embed/9NyxcX3rhQs?controls=0?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border-radius: 15px; margin: 50px;"></iframe>
 			</div>	
 		</div>
-		<div class="row d-flex justify-content-around" style="padding: 33px;">
+		<div class="row d-flex justify-content-around" style="padding: 100px;">
+			<div class="card" style="width: 13rem; height: 300px;">
+				<img src="img/man.png" class="card-img-top" alt="...">
+				<div class="h4 text-center" style="margin-bottom: -15px;">홍길동</div>
+				<div class="card-body d-flex justify-content-around align-items-end">
+				  <div><a href="#" style="text-decoration: none;">유튜브</a></div>
+				  <div><a href="#" style="text-decoration: none;">인스타</a></div>
+				</div>
+		  	</div>
 			<div class="card" style="width: 13rem; height: 300px;">
   				<img src="img/man.png" class="card-img-top" alt="...">
   				<div class="h4 text-center" style="margin-bottom: -15px;">홍길동</div>
@@ -90,8 +97,7 @@
 		</div>	
 	</div>
 	<div class="container-fluid">
-		<div class="h4 d-flex justify-content-center" style="margin-top: 50px;">NEWS</div>
-		<div class="h4 d-flex justify-content-center">API</div>
+		<div class="d-flex justify-content-center" id="news"></div>
 	</div>
 	<form>
 		<div class="modal fade bg-body-secondary" data-bs-theme="dark" id="signIn" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -164,10 +170,10 @@
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 	<script type="text/javascript">	
 		
- 		$(function() {
-    	  	$('#signIn').modal('show');
-    	});
- 		
+// 		$(function() {
+//    	  	$('#signIn').modal('show');
+//    	});
+
     </script>
 </body>
 </html>
