--- a/html/depositAutoTransfer.html
+++ b/html/depositAutoTransfer.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
 </head>
 <body>
-	<header class="p-3 text-bg-dark">
+	<header class="p-1 fixed-top bg-dark" id="header">
 		<div class="container-fluid">
       		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         		<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 align-items-center">
@@ -20,17 +20,17 @@
           			<li class="dropdown">
           				<a href="#" class="nav-link px-4 text-white fs-4" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
           				<ul class="dropdown-menu" data-bs-theme="dark">
-          					<li><a class="dropdown-item fs-4" href="depositMain.html">입금</a></li>
-          					<li><a class="dropdown-item fs-4" href="depositTransfer.html">이체</a></li>
-          					<li><a class="dropdown-item fs-4" href="depositAutoTransfer.html">자동이체</a></li>
+          					<li><a class="dropdown-item fs-4 text-white" href="depositMain.html">입금</a></li>
+          					<li><a class="dropdown-item fs-4 text-white" href="depositTransfer.html">이체</a></li>
+          					<li><a class="dropdown-item fs-4 text-white" href="depositAutoTransfer.html">자동이체</a></li>
         				</ul>
           			</li>
           			<li><a href="exchangeRate.html" class="nav-link px-4 text-white fs-4">환율</a></li>
           			<li class="dropdown">
           				<a href="#" class="nav-link px-4 text-white fs-4" role="button" data-bs-toggle="dropdown" aria-expanded="false">주식</a>
           				<ul class="dropdown-menu" data-bs-theme="dark">
-        					<li><a class="dropdown-item fs-4" href="domesticStock.html">국내</a></li>
-          					<li><a class="dropdown-item fs-4" href="foreignStock.html">해외</a></li>
+        					<li><a class="dropdown-item fs-4 text-white" href="domesticStock.html">국내</a></li>
+          					<li><a class="dropdown-item fs-4 text-white" href="foreignStock.html">해외</a></li>
         				</ul>
           			</li>
         		</ul>
