--- a/html/depositTransfer.html
+++ b/html/depositTransfer.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-	<header class="p-3 text-bg-dark">
+	<header class="p-1 fixed-top bg-dark" id="header">
 		<div class="container-fluid">
       		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         		<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 align-items-center">
@@ -18,17 +18,17 @@
           			<li class="dropdown">
           				<a href="#" class="nav-link px-4 text-white fs-4" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
           				<ul class="dropdown-menu" data-bs-theme="dark">
-          					<li><a class="dropdown-item fs-4" href="depositMain.html">입금</a></li>
-          					<li><a class="dropdown-item fs-4" href="depositTransfer.html">이체</a></li>
-          					<li><a class="dropdown-item fs-4" href="depositAutoTransfer.html">자동이체</a></li>
+          					<li><a class="dropdown-item fs-4 text-white" href="depositMain.html">입금</a></li>
+          					<li><a class="dropdown-item fs-4 text-white" href="depositTransfer.html">이체</a></li>
+          					<li><a class="dropdown-item fs-4 text-white" href="depositAutoTransfer.html">자동이체</a></li>
         				</ul>
           			</li>
           			<li><a href="exchangeRate.html" class="nav-link px-4 text-white fs-4">환율</a></li>
           			<li class="dropdown">
           				<a href="#" class="nav-link px-4 text-white fs-4" role="button" data-bs-toggle="dropdown" aria-expanded="false">주식</a>
           				<ul class="dropdown-menu" data-bs-theme="dark">
-        					<li><a class="dropdown-item fs-4" href="domesticStock.html">국내</a></li>
-          					<li><a class="dropdown-item fs-4" href="foreignStock.html">해외</a></li>
+        					<li><a class="dropdown-item fs-4 text-white" href="domesticStock.html">국내</a></li>
+          					<li><a class="dropdown-item fs-4 text-white" href="foreignStock.html">해외</a></li>
         				</ul>
           			</li>
         		</ul>
