--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-	<header class="p-3 text-bg-dark">
+	<header class="p-1 fixed-top bg-dark" id="header">
 		<div class="container-fluid">
       		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         		<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 align-items-center">
@@ -18,17 +18,17 @@
           			<li class="dropdown">
           				<a href="#" class="nav-link px-4 text-white fs-4" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
           				<ul class="dropdown-menu" data-bs-theme="dark">
-          					<li><a class="dropdown-item fs-4" href="depositMain.html">입금</a></li>
-          					<li><a class="dropdown-item fs-4" href="depositTransfer.html">이체</a></li>
-          					<li><a class="dropdown-item fs-4" href="depositAutoTransfer.html">자동이체</a></li>
+          					<li><a class="dropdown-item fs-4 text-white" href="depositMain.html">입금</a></li>
+          					<li><a class="dropdown-item fs-4 text-white" href="depositTransfer.html">이체</a></li>
+          					<li><a class="dropdown-item fs-4 text-white" href="depositAutoTransfer.html">자동이체</a></li>
         				</ul>
           			</li>
           			<li><a href="exchangeRate.html" class="nav-link px-4 text-white fs-4">환율</a></li>
           			<li class="dropdown">
           				<a href="#" class="nav-link px-4 text-white fs-4" role="button" data-bs-toggle="dropdown" aria-expanded="false">주식</a>
           				<ul class="dropdown-menu" data-bs-theme="dark">
-        					<li><a class="dropdown-item fs-4" href="domesticStock.html">국내</a></li>
-          					<li><a class="dropdown-item fs-4" href="foreignStock.html">해외</a></li>
+        					<li><a class="dropdown-item fs-4 text-white" href="domesticStock.html">국내</a></li>
+          					<li><a class="dropdown-item fs-4 text-white" href="foreignStock.html">해외</a></li>
         				</ul>
           			</li>
         		</ul>
@@ -41,12 +41,12 @@
 	</header>
 	<div class="container-fluid">
 		<div class="row">
-			<div class="d-flex justify-content-center" style="padding: 33px; height: 600px;">
+			<div class="d-flex justify-content-center" style="padding: 33px; height: 600px; margin-top: 80px;">
 				<iframe width="1200" height="100%" src="https://www.youtube.com/embed/9NyxcX3rhQs?controls=0?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border-radius: 15px; margin: 50px;"></iframe>
 			</div>	
 		</div>
-		<div class="row d-flex justify-content-around" style="padding: 100px;">
-			<div class="card" style="width: 13rem; height: 300px;">
+		<div class="row-md d-flex justify-content-center" style="padding: 100px;">
+			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
 				<img src="img/man.png" class="card-img-top" alt="...">
 				<div class="h4 text-center" style="margin-bottom: -15px;">홍길동</div>
 				<div class="card-body d-flex justify-content-around align-items-end">
@@ -54,7 +54,7 @@
 				  <div><a href="#" style="text-decoration: none;">인스타</a></div>
 				</div>
 		  	</div>
-			<div class="card" style="width: 13rem; height: 300px;">
+			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
   				<img src="img/man.png" class="card-img-top" alt="...">
   				<div class="h4 text-center" style="margin-bottom: -15px;">홍길동</div>
   				<div class="card-body d-flex justify-content-around align-items-end">
@@ -62,7 +62,7 @@
 					<div><a href="#" style="text-decoration: none;">인스타</a></div>
   				</div>
 			</div>
-			<div class="card" style="width: 13rem; height: 300px;">
+			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
   				<img src="img/man.png" class="card-img-top" alt="...">
   				<div class="h4 text-center" style="margin-bottom: -15px;">홍길동</div>
   				<div class="card-body d-flex justify-content-around align-items-end">
@@ -70,7 +70,7 @@
 					<div><a href="#" style="text-decoration: none;">인스타</a></div>
   				</div>
 			</div>
-			<div class="card" style="width: 13rem; height: 300px;">
+			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
   				<img src="img/man.png" class="card-img-top" alt="...">
   				<div class="h4 text-center" style="margin-bottom: -15px;">홍길동</div>
   				<div class="card-body d-flex justify-content-around align-items-end">
@@ -78,15 +78,7 @@
 					<div><a href="#" style="text-decoration: none;">인스타</a></div>
   				</div>
 			</div>
-			<div class="card" style="width: 13rem; height: 300px;">
-  				<img src="img/man.png" class="card-img-top" alt="...">
-  				<div class="h4 text-center" style="margin-bottom: -15px;">홍길동</div>
-  				<div class="card-body d-flex justify-content-around align-items-end">
-					<div><a href="#" style="text-decoration: none;">유튜브</a></div>
-					<div><a href="#" style="text-decoration: none;">인스타</a></div>
-  				</div>
-			</div>
-			<div class="card" style="width: 13rem; height: 300px;">
+			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
   				<img src="img/man.png" class="card-img-top" alt="...">
   				<div class="h4 text-center" style="margin-bottom: -15px;">홍길동</div>
   				<div class="card-body d-flex justify-content-around align-items-end">
@@ -170,9 +162,6 @@
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 	<script type="text/javascript">	
 		
-// 		$(function() {
-//    	  	$('#signIn').modal('show');
-//    	});
 
     </script>
 </body>
