selcetPeriod & influencer update

--- a/html/index.html
+++ b/html/index.html
@@ -13,28 +13,28 @@
 		<div class="container-fluid">
       		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         		<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 align-items-center">
-         	 		<li><a href="index.html" class="nav-link px-5 text-secondary fs-1">KOKOA BANK</a></li>
-          			<li><a href="accountMain.html" class="nav-link px-4 text-white fs-4">조회</a></li>
+         	 		<li><a href="index.html" class="nav-link px-5 text-secondary fs-3">KOKOA BANK</a></li>
+          			<li><a href="accountMain.html" class="nav-link px-4 text-white fs-5">조회</a></li>
           			<li class="dropdown">
-          				<a href="#" class="nav-link px-4 text-white fs-4" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
+          				<a href="#" class="nav-link px-4 text-white fs-5" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
           				<ul class="dropdown-menu" data-bs-theme="dark">
-          					<li><a class="dropdown-item fs-4 text-white" href="depositMain.html">입금</a></li>
-          					<li><a class="dropdown-item fs-4 text-white" href="depositTransfer.html">이체</a></li>
-          					<li><a class="dropdown-item fs-4 text-white" href="depositAutoTransfer.html">자동이체</a></li>
+          					<li><a class="dropdown-item fs-6 text-white" href="depositMain.html">입금</a></li>
+          					<li><a class="dropdown-item fs-6 text-white" href="depositTransfer.html">이체</a></li>
+          					<li><a class="dropdown-item fs-6 text-white" href="depositAutoTransfer.html">자동이체</a></li>
         				</ul>
           			</li>
-          			<li><a href="exchangeRate.html" class="nav-link px-4 text-white fs-4">환율</a></li>
+          			<li><a href="exchangeRate.html" class="nav-link px-4 text-white fs-5">환율</a></li>
           			<li class="dropdown">
-          				<a href="#" class="nav-link px-4 text-white fs-4" role="button" data-bs-toggle="dropdown" aria-expanded="false">주식</a>
+          				<a href="#" class="nav-link px-4 text-white fs-5" role="button" data-bs-toggle="dropdown" aria-expanded="false">주식</a>
           				<ul class="dropdown-menu" data-bs-theme="dark">
-        					<li><a class="dropdown-item fs-4 text-white" href="domesticStock.html">국내</a></li>
-          					<li><a class="dropdown-item fs-4 text-white" href="foreignStock.html">해외</a></li>
+        					<li><a class="dropdown-item fs-6 text-white" href="domesticStock.html">국내</a></li>
+          					<li><a class="dropdown-item fs-6 text-white" href="foreignStock.html">해외</a></li>
         				</ul>
           			</li>
         		</ul>
         		<div class="text-end">
-          			<button type="button" class="btn text-white fs-4 px-4" data-bs-toggle="modal" data-bs-target="#signIn" id="btnSignin">로그인</button>
-					<button type="button" class="btn text-white fs-4 px-4" data-bs-toggle="modal" data-bs-target="#signUp" id="btnSignup">회원가입</button>	
+          			<button type="button" class="btn text-white fs-5 px-4" data-bs-toggle="modal" data-bs-target="#signIn" id="btnSignin">로그인</button>
+					<button type="button" class="btn text-white fs-5 px-4" data-bs-toggle="modal" data-bs-target="#signUp" id="btnSignup">회원가입</button>	
         		</div>
       		</div>
     	</div>
@@ -42,50 +42,50 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="d-flex justify-content-center" style="padding: 33px; height: 600px; margin-top: 80px;">
-				<iframe width="1200" height="100%" src="https://www.youtube.com/embed/9NyxcX3rhQs?controls=0?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border-radius: 15px; margin: 50px;"></iframe>
+				<iframe width="1200" height="100%" src="https://www.youtube.com/embed/NJUjU9ALj4A?controls=0?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border-radius: 15px; margin: 50px;"></iframe>
 			</div>	
 		</div>
 		<div class="row-md d-flex justify-content-center" style="padding: 100px;">
 			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
-				<img src="img/man.png" class="card-img-top" alt="...">
-				<div class="h4 text-center" style="margin-bottom: -15px;">홍길동</div>
+				<img src="img/influencer1.jpg" class="card-img-top" alt="...">
+				<div class="h4 text-center" style="margin-bottom: -15px; margin-top: 30px;">주식단테</div>
 				<div class="card-body d-flex justify-content-around align-items-end">
-				  <div><a href="#" style="text-decoration: none;">유튜브</a></div>
-				  <div><a href="#" style="text-decoration: none;">인스타</a></div>
+				  <div><a href="https://www.youtube.com/channel/UC6ij59Gy_HnqO4pFu9A_zgQ" style="text-decoration: none;" class="fs-5">유튜브</a></div>
+				  <div><a href="https://www.instagram.com/imtaeho11/" style="text-decoration: none;" class="fs-5">인스타</a></div>
+				</div>
+		  	</div>
+			  <div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
+				<img src="img/influencer2.jpg" class="card-img-top" alt="...">
+				<div class="h4 text-center" style="margin-bottom: -15px; margin-top: 30px;">삼프로TV</div>
+				<div class="card-body d-flex justify-content-around align-items-end">
+				  <div><a href="https://www.youtube.com/@3protv/featured" style="text-decoration: none;" class="fs-5">유튜브</a></div>
+				  <div><a href="https://www.instagram.com/3protv.official/" style="text-decoration: none;" class="fs-5">인스타</a></div>
+				</div>
+		  	</div>
+			  <div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
+				<img src="img/influencer3.jpg" class="card-img-top" alt="...">
+				<div class="h4 text-center" style="margin-bottom: -15px; margin-top: 30px;">슈카월드</div>
+				<div class="card-body d-flex justify-content-around align-items-end">
+				  <div><a href="https://www.youtube.com/@syukaworld/featured" style="text-decoration: none;" class="fs-5">유튜브</a></div>
+				  <div><a href="https://www.instagram.com/syukaworld_mini/" style="text-decoration: none;" class="fs-5">인스타</a></div>
+				</div>
+		  	</div>
+			  <div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
+				<img src="img/influencer4.jpg" class="card-img-top" alt="...">
+				<div class="h4 text-center" style="margin-bottom: -15px; margin-top: 30px;">테미녀</div>
+				<div class="card-body d-flex justify-content-around align-items-end">
+				  <div><a href="https://www.youtube.com/@tesla_crazy_lady" style="text-decoration: none;" class="fs-5">유튜브</a></div>
+				  <div><a href="https://www.instagram.com/tesla_crazy_lady/" style="text-decoration: none;" class="fs-5">인스타</a></div>
 				</div>
 		  	</div>
 			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
-  				<img src="img/man.png" class="card-img-top" alt="...">
-  				<div class="h4 text-center" style="margin-bottom: -15px;">홍길동</div>
-  				<div class="card-body d-flex justify-content-around align-items-end">
-					<div><a href="#" style="text-decoration: none;">유튜브</a></div>
-					<div><a href="#" style="text-decoration: none;">인스타</a></div>
-  				</div>
-			</div>
-			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
-  				<img src="img/man.png" class="card-img-top" alt="...">
-  				<div class="h4 text-center" style="margin-bottom: -15px;">홍길동</div>
-  				<div class="card-body d-flex justify-content-around align-items-end">
-					<div><a href="#" style="text-decoration: none;">유튜브</a></div>
-					<div><a href="#" style="text-decoration: none;">인스타</a></div>
-  				</div>
-			</div>
-			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
-  				<img src="img/man.png" class="card-img-top" alt="...">
-  				<div class="h4 text-center" style="margin-bottom: -15px;">홍길동</div>
-  				<div class="card-body d-flex justify-content-around align-items-end">
-					<div><a href="#" style="text-decoration: none;">유튜브</a></div>
-					<div><a href="#" style="text-decoration: none;">인스타</a></div>
-  				</div>
-			</div>
-			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
-  				<img src="img/man.png" class="card-img-top" alt="...">
-  				<div class="h4 text-center" style="margin-bottom: -15px;">홍길동</div>
-  				<div class="card-body d-flex justify-content-around align-items-end">
-					<div><a href="#" style="text-decoration: none;">유튜브</a></div>
-					<div><a href="#" style="text-decoration: none;">인스타</a></div>
-  				</div>
-			</div>
+				<img src="img/influencer5.jpg" class="card-img-top" alt="...">
+				<div class="h4 text-center" style="margin-bottom: -15px; margin-top: 30px;">천덩이</div>
+				<div class="card-body d-flex justify-content-around align-items-end">
+				  <div><a href="https://www.youtube.com/@cheondng2/featured" style="text-decoration: none;" class="fs-5">유튜브</a></div>
+				  <div><a href="https://www.instagram.com/cheondng2/" style="text-decoration: none;" class="fs-5">인스타</a></div>
+				</div>
+		  	</div>
 		</div>	
 	</div>
 	<div class="container-fluid">
