--- a/html/accountMain.html
+++ b/html/accountMain.html
@@ -17,33 +17,33 @@
 		<div class="container-fluid">
       		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         		<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 align-items-center">
-         	 		<li><a href="index.html" class="nav-link px-5 text-secondary fs-1">KOKOA BANK</a></li>
-          			<li><a href="accountMain.html" class="nav-link px-4 text-white fs-4">조회</a></li>
+         	 		<li><a href="index.html" class="nav-link px-5 text-secondary fs-3">KOKOA BANK</a></li>
+          			<li><a href="accountMain.html" class="nav-link px-4 text-white fs-5">조회</a></li>
           			<li class="dropdown">
-          				<a href="#" class="nav-link px-4 text-white fs-4" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
+          				<a href="#" class="nav-link px-4 text-white fs-5" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
           				<ul class="dropdown-menu" data-bs-theme="dark">
-          					<li><a class="dropdown-item fs-4 text-white" href="depositMain.html">입금</a></li>
-          					<li><a class="dropdown-item fs-4 text-white" href="depositTransfer.html">이체</a></li>
-          					<li><a class="dropdown-item fs-4 text-white" href="depositAutoTransfer.html">자동이체</a></li>
+          					<li><a class="dropdown-item fs-6 text-white" href="depositMain.html">입금</a></li>
+          					<li><a class="dropdown-item fs-6 text-white" href="depositTransfer.html">이체</a></li>
+          					<li><a class="dropdown-item fs-6 text-white" href="depositAutoTransfer.html">자동이체</a></li>
         				</ul>
           			</li>
-          			<li><a href="exchangeRate.html" class="nav-link px-4 text-white fs-4">환율</a></li>
+          			<li><a href="exchangeRate.html" class="nav-link px-4 text-white fs-5">환율</a></li>
           			<li class="dropdown">
-          				<a href="#" class="nav-link px-4 text-white fs-4" role="button" data-bs-toggle="dropdown" aria-expanded="false">주식</a>
+          				<a href="#" class="nav-link px-4 text-white fs-5" role="button" data-bs-toggle="dropdown" aria-expanded="false">주식</a>
           				<ul class="dropdown-menu" data-bs-theme="dark">
-        					<li><a class="dropdown-item fs-4 text-white" href="domesticStock.html">국내</a></li>
-          					<li><a class="dropdown-item fs-4 text-white" href="foreignStock.html">해외</a></li>
+        					<li><a class="dropdown-item fs-6 text-white" href="domesticStock.html">국내</a></li>
+          					<li><a class="dropdown-item fs-6 text-white" href="foreignStock.html">해외</a></li>
         				</ul>
           			</li>
         		</ul>
         		<div class="text-end">
-          			<button type="button" class="btn text-white fs-4 px-4" data-bs-toggle="modal" data-bs-target="#signIn" id="btnSignin">로그인</button>
-					<button type="button" class="btn text-white fs-4 px-4" data-bs-toggle="modal" data-bs-target="#signUp" id="btnSignup">회원가입</button>	
+          			<button type="button" class="btn text-white fs-5 px-4" data-bs-toggle="modal" data-bs-target="#signIn" id="btnSignin">로그인</button>
+					<button type="button" class="btn text-white fs-5 px-4" data-bs-toggle="modal" data-bs-target="#signUp" id="btnSignup">회원가입</button>	
         		</div>
       		</div>
     	</div>
 	</header>
-	<div id="myCarousel" class="carousel slide carousel-dark" data-bs-touch="false" style="padding: 50px; box-sizing: border-box; margin-top: 80px;">
+	<div id="myCarousel" class="carousel slide carousel-dark" data-bs-touch="false" style="padding: 50px; box-sizing: border-box; margin: 80px 200px 0 200px;">
   		<div class="carousel-inner">
 	    	<div class="carousel-item active">
 	    		<div class="d-flex justify-content-center">
@@ -500,26 +500,27 @@
 		
 	 	// 기간설정
 	 	$(".selectPeriod").on("change", function() {
-  			var period = $(this).val();
-  			var today = new Date();
-
-  			switch (period) {
-    			case "1주일":
-      				$(".dateStart").datepicker("setDate", today.getDate() - 7);
-      				$(".dateFinish").datepicker("setDate", today);
-      				break;
-			    case "1개월":
-			      	$(".dateStart").datepicker("setDate", today.getDate() - 30);
-			     	$(".dateFinish").datepicker("setDate", today);
-			      	break;
-			    case "3개월":
-			      	$(".dateStart").datepicker("setDate", today.getDate() - 90);
-			     	$(".dateFinish").datepicker("setDate", today);
-			      	break;
-  			}
+			var period = $(this).val();
+			var today = new Date();
+			var oneWeekAgo = new Date(today.getTime() - (7 * 24 * 60 * 60 * 1000));
+			var oneMonthAgo = new Date(today.getTime() - (30 * 24 * 60 * 60 * 1000));
+			var threeMonthsAgo = new Date(today.getTime() - (90 * 24 * 60 * 60 * 1000));
+			
+			switch (period) {
+			  	case "1주일":
+					$(".dateStart").datepicker("setDate", oneWeekAgo);
+					$(".dateFinish").datepicker("setDate", today);
+					break;
+			  	case "1개월":
+					$(".dateStart").datepicker("setDate", oneMonthAgo);
+					$(".dateFinish").datepicker("setDate", today);
+					break;
+			  	case "3개월":
+					$(".dateStart").datepicker("setDate", threeMonthsAgo);
+					$(".dateFinish").datepicker("setDate", today);
+					break;
+			}
 		});
-	 	
-	 	//
 	 	
     </script>
 </body>
