--- a/html/index.html
+++ b/html/index.html
@@ -113,15 +113,15 @@
 	<form>
 		<div class="modal fade bg-body-secondary" data-bs-theme="dark" id="signUp" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" dialog aria-labelledby="staticBackdropLabel" aria-hidden="true">
 	  		<div class="modal-dialog">
-	    		<div class="modal-content" style="width: 622px; height: 622px; padding: 50px;">
+	    		<div class="modal-content" style="width: 622px; height: 730px; padding: 50px;">
 	      			<div class="modal-header d-flex justify-content-around">
 	        			<button type="button" class="btn w-50" data-bs-toggle="modal" data-bs-target="#signIn">로그인</button>
 	        			<button type="button" class="btn btn-outline-primary w-50">회원가입</button>
 	      			</div>
-	      			<div class="modal-body d-flex">
-	      				<input type="text" class="form-control" id="signupLastname" placeholder="성" required>
-						<input type="text" class="form-control" id="signupFirstname" placeholder="이름" required>
-					</div>
+					<div class="modal-body d-flex">
+						<input type="text" class="form-control" id="signupLastname" placeholder="성" required>
+					  	<input type="text" class="form-control" id="signupFirstname" placeholder="이름" required>
+				  	</div>
 	      			<div class="modal-body">
 						<input type="text" class="form-control" id="signupId" placeholder="아이디" required>
 	      			</div>
@@ -134,6 +134,14 @@
 	      			<div class="modal-body">
 						<input type="text" class="form-control" id="signupEmail" placeholder="이메일" required>
 	      			</div>
+					<div class="modal-body d-flex">
+						<select class="form-select selectPeriod">
+							<option selected disabled>성별</option>
+							<option>남자</option>
+							<option>여자</option>
+							<option>기타</option>
+					  	</select>
+				  	</div>
 	      			<div class="modal-body d-flex">
 						<input type="text" class="form-control w-75" id="signupPhone" placeholder="휴대전화">
 						<button type="button" id="authButton" class="btn btn-outline-primary w-25">인증</button>
