--- a/html/accountMain.html
+++ b/html/accountMain.html
@@ -43,11 +43,13 @@
   		<div class="carousel-inner">
 	    	<div class="carousel-item active">
 	    		<div class="d-flex justify-content-center">
-		    		<div class="rounded border border-dark col-md-4 text-left bg-secondary" style="padding: 30px;">
-		    			<p class="fs-4">예금주: 이준혁</p>
-		    			<p class="fs-4">계좌명: 이준혁 통장1</p>			
-		    			<p class="fs-4">계좌번호: 3414-34-3141</p>
-		    			<p class="fs-4">개설일: 2023-06-01</p>
+		    		<div class="rounded border border-dark col-md text-left bg-secondary" style="padding: 30px;">
+		    			<div class="col-md-3" style="margin-left: 570px;">
+							<p class="fs-4 text-white">예금주: 이준혁</p>
+							<p class="fs-4 text-white">계좌명: 이준혁 통장1</p>			
+							<p class="fs-4 text-white">계좌번호: 3414-34-3141</p>
+							<p class="fs-4 text-white">개설일: 2023-06-01</p>
+						</div>		
 		    		</div>
 	    		</div>
 	    		<br>
@@ -161,11 +163,13 @@
 	    	</div>
     		<div class="carousel-item">
     			<div class="d-flex justify-content-center">
-		    		<div class="rounded border border-dark col-md-4 text-left bg-success" style="padding: 30px;">
-		    			<p class="fs-4">예금주: 이준혁</p>
-		    			<p class="fs-4">계좌명: 이준혁 통장2</p>			
-		    			<p class="fs-4">계좌번호: 3414-34-3141</p>
-		    			<p class="fs-4">개설일: 2023-06-01</p>
+		    		<div class="rounded border border-dark col-md text-left bg-success" style="padding: 30px;">
+		    			<div class="col-md-3" style="margin-left: 570px;">
+							<p class="fs-4 text-white">예금주: 이준혁</p>
+							<p class="fs-4 text-white">계좌명: 이준혁 통장1</p>			
+							<p class="fs-4 text-white">계좌번호: 3414-34-3141</p>
+							<p class="fs-4 text-white">개설일: 2023-06-01</p>
+						</div>	
 		    		</div>
 	    		</div>
 	    		<br>
@@ -279,11 +283,13 @@
 	    	</div>
 	    	<div class="carousel-item">
 	    		<div class="d-flex justify-content-center">
-		    		<div class="rounded border border-dark col-md-4 text-left bg-info" style="padding: 30px;">
-		    			<p class="fs-4">예금주: 이준혁</p>
-		    			<p class="fs-4">계좌명: 이준혁 통장3</p>		
-		    			<p class="fs-4">계좌번호: 3414-34-3141</p>
-		    			<p class="fs-4">개설일: 2023-06-01</p>
+		    		<div class="rounded border border-dark col-md text-left bg-info" style="padding: 30px;">
+		    			<div class="col-md-3" style="margin-left: 570px;">
+							<p class="fs-4 text-white">예금주: 이준혁</p>
+							<p class="fs-4 text-white">계좌명: 이준혁 통장1</p>			
+							<p class="fs-4 text-white">계좌번호: 3414-34-3141</p>
+							<p class="fs-4 text-white">개설일: 2023-06-01</p>
+						</div>	
 		    		</div>
 	    		</div>
 	    		<br>
