--- a/html/accountMain.html
+++ b/html/accountMain.html
@@ -283,7 +283,7 @@
 	    	</div>
 	    	<div class="carousel-item">
 	    		<div class="d-flex justify-content-center">
-		    		<div class="rounded border border-dark col-md text-left bg-info" style="padding: 30px;">
+		    		<div class="rounded border border-dark col-md text-left bg-black" style="padding: 30px;">
 		    			<div class="col-md-3" style="margin-left: 570px;">
 							<p class="fs-4 text-white">예금주: 이준혁</p>
 							<p class="fs-4 text-white">계좌명: 이준혁 통장1</p>			
