--- a/html/accountMain.html
+++ b/html/accountMain.html
@@ -42,15 +42,15 @@
 	<div id="myCarousel" class="carousel slide carousel-dark" data-bs-touch="false" style="padding: 50px; box-sizing: border-box; margin: 80px 200px 0 200px;">
   		<div class="carousel-inner">
 	    	<div class="carousel-item active">
-	    		<div class="d-flex justify-content-center">
-		    		<div class="rounded border border-dark col-md text-left bg-secondary" style="padding: 30px;">
-		    			<div class="col-md-3" style="margin-left: 570px;">
-							<p class="fs-4 text-white">예금주: 이준혁</p>
-							<p class="fs-4 text-white">계좌명: 이준혁 통장1</p>			
-							<p class="fs-4 text-white">계좌번호: 3414-34-3141</p>
-							<p class="fs-4 text-white">개설일: 2023-06-01</p>
-						</div>		
-		    		</div>
+				<div class="d-flex justify-content-center">
+					<div class="rounded border border-dark bg-secondary" style="padding: 30px;">
+						<div class="col d-flex justify-content-center">
+							<i class="fa-solid fa-money-check fs-1 px-3 text-white"></i>
+							<p class="fs-4 text-white px-3">예금통장</p>			
+							<p class="fs-4 text-white px-3">3414-34-3321</p>
+							<p class="fs-4 text-white px-3">300,000,000원</p>
+						</div>	
+					</div>
 	    		</div>
 	    		<br>
 	    		<div class="d-flex justify-content-center">
@@ -163,12 +163,12 @@
 	    	</div>
     		<div class="carousel-item">
     			<div class="d-flex justify-content-center">
-		    		<div class="rounded border border-dark col-md text-left bg-success" style="padding: 30px;">
-		    			<div class="col-md-3" style="margin-left: 570px;">
-							<p class="fs-4 text-white">예금주: 이준혁</p>
-							<p class="fs-4 text-white">계좌명: 이준혁 통장1</p>			
-							<p class="fs-4 text-white">계좌번호: 3414-34-3141</p>
-							<p class="fs-4 text-white">개설일: 2023-06-01</p>
+		    		<div class="rounded border border-dark bg-success" style="padding: 30px;">
+		    			<div class="col d-flex justify-content-center">
+							<i class="fa-solid fa-money-check fs-1 px-3 text-white"></i>
+							<p class="fs-4 text-white px-3">월급통장</p>			
+							<p class="fs-4 text-white px-3">3414-34-3321</p>
+							<p class="fs-4 text-white px-3">5,000,000원</p>
 						</div>	
 		    		</div>
 	    		</div>
@@ -282,15 +282,15 @@
 				</table>
 	    	</div>
 	    	<div class="carousel-item">
-	    		<div class="d-flex justify-content-center">
-		    		<div class="rounded border border-dark col-md text-left bg-black" style="padding: 30px;">
-		    			<div class="col-md-3" style="margin-left: 570px;">
-							<p class="fs-4 text-white">예금주: 이준혁</p>
-							<p class="fs-4 text-white">계좌명: 이준혁 통장1</p>			
-							<p class="fs-4 text-white">계좌번호: 3414-34-3141</p>
-							<p class="fs-4 text-white">개설일: 2023-06-01</p>
+				<div class="d-flex justify-content-center">
+					<div class="rounded border border-dark bg-dark" style="padding: 30px;">
+						<div class="col d-flex justify-content-center">
+							<i class="fa-solid fa-money-check fs-1 px-3 text-white"></i>
+							<p class="fs-4 text-white px-3">밥값통장</p>			
+							<p class="fs-4 text-white px-3">3414-34-3141</p>
+							<p class="fs-4 text-white px-3">500,000원</p>
 						</div>	
-		    		</div>
+					</div>
 	    		</div>
 	    		<br>
 	    		<div class="d-flex justify-content-center">
