head 메뉴 링크 변경 및 파일이름 변경

--- a/html/account.html
+++ b/html/account.html
@@ -18,13 +18,13 @@
       		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         		<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 align-items-center">
          	 		<li><a href="index.html" class="nav-link px-5 text-secondary fs-3">KOKOA BANK</a></li>
-          			<li><a href="accountMain.html" class="nav-link px-4 text-white fs-5">조회</a></li>
+          			<li><a href="account.html" class="nav-link px-4 text-white fs-5">조회</a></li>
           			<li class="dropdown">
           				<a href="#" class="nav-link px-4 text-white fs-5" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
           				<ul class="dropdown-menu" data-bs-theme="dark">
-          					<li><a class="dropdown-item fs-6 text-white" href="depositMain.html">입금</a></li>
-          					<li><a class="dropdown-item fs-6 text-white" href="depositTransfer.html">이체</a></li>
-          					<li><a class="dropdown-item fs-6 text-white" href="depositAutoTransfer.html">자동이체</a></li>
+							<li><a class="dropdown-item fs-6 text-white" href="deposit.html">입금</a></li>
+							<li><a class="dropdown-item fs-6 text-white" href="send.html">이체</a></li>
+							<li><a class="dropdown-item fs-6 text-white" href="autoSend.html">자동이체</a></li>
         				</ul>
           			</li>
           			<li><a href="exchangeRate.html" class="nav-link px-4 text-white fs-5">환율</a></li>
