--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,8 @@
     <title>KOKOA BANK</title>
     <!-- 부트스트랩 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+	<!-- Fontawesome -->
+	<script src="https://kit.fontawesome.com/b05f67c88a.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	<header class="p-1 fixed-top bg-dark" id="header">
@@ -49,41 +51,81 @@
 			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
 				<img src="img/influencer1.jpg" class="card-img-top" alt="...">
 				<div class="h4 text-center" style="margin-bottom: -15px; margin-top: 30px;">주식단테</div>
-				<div class="card-body d-flex justify-content-around align-items-end">
-				  <div><a href="https://www.youtube.com/channel/UC6ij59Gy_HnqO4pFu9A_zgQ" style="text-decoration: none;" class="fs-5">유튜브</a></div>
-				  <div><a href="https://www.instagram.com/imtaeho11/" style="text-decoration: none;" class="fs-5">인스타</a></div>
+				<div class="card-body d-flex justify-content-center align-items-end">
+					<div>
+						<a href="https://www.youtube.com/channel/UC6ij59Gy_HnqO4pFu9A_zgQ" style="text-decoration: none;" class="fs-1 px-2">
+							<i class="fa-brands fa-youtube" style="color: #ff0000;"></i>
+						</a>
+					</div>
+					<div>
+						<a href="https://www.instagram.com/imtaeho11/" style="text-decoration: none;" class="fs-1 px-2">
+							<i class="fa-brands fa-instagram" style="color: #46729b;"></i>
+						</a>
+					</div>
 				</div>
 		  	</div>
-			  <div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
+			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
 				<img src="img/influencer2.jpg" class="card-img-top" alt="...">
 				<div class="h4 text-center" style="margin-bottom: -15px; margin-top: 30px;">삼프로TV</div>
-				<div class="card-body d-flex justify-content-around align-items-end">
-				  <div><a href="https://www.youtube.com/@3protv/featured" style="text-decoration: none;" class="fs-5">유튜브</a></div>
-				  <div><a href="https://www.instagram.com/3protv.official/" style="text-decoration: none;" class="fs-5">인스타</a></div>
+				<div class="card-body d-flex justify-content-center align-items-end">
+					<div>
+						<a href="https://www.youtube.com/channel/UC6ij59Gy_HnqO4pFu9A_zgQ" style="text-decoration: none;" class="fs-1 px-2">
+							<i class="fa-brands fa-youtube" style="color: #ff0000;"></i>
+						</a>
+					</div>
+					<div>
+						<a href="https://www.instagram.com/imtaeho11/" style="text-decoration: none;" class="fs-1 px-2">
+							<i class="fa-brands fa-instagram" style="color: #46729b;"></i>
+						</a>
+					</div>
 				</div>
-		  	</div>
-			  <div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
+			</div>
+			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
 				<img src="img/influencer3.jpg" class="card-img-top" alt="...">
 				<div class="h4 text-center" style="margin-bottom: -15px; margin-top: 30px;">슈카월드</div>
-				<div class="card-body d-flex justify-content-around align-items-end">
-				  <div><a href="https://www.youtube.com/@syukaworld/featured" style="text-decoration: none;" class="fs-5">유튜브</a></div>
-				  <div><a href="https://www.instagram.com/syukaworld_mini/" style="text-decoration: none;" class="fs-5">인스타</a></div>
+				<div class="card-body d-flex justify-content-center align-items-end">
+					<div>
+						<a href="https://www.youtube.com/channel/UC6ij59Gy_HnqO4pFu9A_zgQ" style="text-decoration: none;" class="fs-1 px-2">
+							<i class="fa-brands fa-youtube" style="color: #ff0000;"></i>
+						</a>
+					</div>
+					<div>
+						<a href="https://www.instagram.com/imtaeho11/" style="text-decoration: none;" class="fs-1 px-2">
+							<i class="fa-brands fa-instagram" style="color: #46729b;"></i>
+						</a>
+					</div>
 				</div>
 		  	</div>
 			  <div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
 				<img src="img/influencer4.jpg" class="card-img-top" alt="...">
 				<div class="h4 text-center" style="margin-bottom: -15px; margin-top: 30px;">테미녀</div>
-				<div class="card-body d-flex justify-content-around align-items-end">
-				  <div><a href="https://www.youtube.com/@tesla_crazy_lady" style="text-decoration: none;" class="fs-5">유튜브</a></div>
-				  <div><a href="https://www.instagram.com/tesla_crazy_lady/" style="text-decoration: none;" class="fs-5">인스타</a></div>
+				<div class="card-body d-flex justify-content-center align-items-end">
+					<div>
+						<a href="https://www.youtube.com/channel/UC6ij59Gy_HnqO4pFu9A_zgQ" style="text-decoration: none;" class="fs-1 px-2">
+							<i class="fa-brands fa-youtube" style="color: #ff0000;"></i>
+						</a>
+					</div>
+					<div>
+						<a href="https://www.instagram.com/imtaeho11/" style="text-decoration: none;" class="fs-1 px-2">
+							<i class="fa-brands fa-instagram" style="color: #46729b;"></i>
+						</a>
+					</div>
 				</div>
 		  	</div>
 			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
 				<img src="img/influencer5.jpg" class="card-img-top" alt="...">
 				<div class="h4 text-center" style="margin-bottom: -15px; margin-top: 30px;">천덩이</div>
-				<div class="card-body d-flex justify-content-around align-items-end">
-				  <div><a href="https://www.youtube.com/@cheondng2/featured" style="text-decoration: none;" class="fs-5">유튜브</a></div>
-				  <div><a href="https://www.instagram.com/cheondng2/" style="text-decoration: none;" class="fs-5">인스타</a></div>
+				<div class="card-body d-flex justify-content-center align-items-end">
+					<div>
+						<a href="https://www.youtube.com/channel/UC6ij59Gy_HnqO4pFu9A_zgQ" style="text-decoration: none;" class="fs-1 px-2">
+							<i class="fa-brands fa-youtube" style="color: #ff0000;"></i>
+						</a>
+					</div>
+					<div>
+						<a href="https://www.instagram.com/imtaeho11/" style="text-decoration: none;" class="fs-1 px-2">
+							<i class="fa-brands fa-instagram" style="color: #46729b;"></i>
+						</a>
+					</div>
 				</div>
 		  	</div>
 		</div>	
