--- a/html/account.html
+++ b/html/account.html
@@ -11,6 +11,10 @@
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
 	<!-- Fontawesome -->
 	<script src="https://kit.fontawesome.com/b05f67c88a.js" crossorigin="anonymous"></script>
+	<!-- font-family: 'Dongle', sans-serif; -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header class="p-1 fixed-top bg-dark" id="header">
@@ -44,11 +48,11 @@
 	    	<div class="carousel-item active">
 				<div class="d-flex justify-content-center">
 					<div class="rounded border border-dark bg-secondary" style="padding: 30px;">
-						<div class="col d-flex justify-content-center">
-							<i class="fa-solid fa-money-check fs-1 px-3 text-white"></i>
-							<p class="fs-4 text-white px-3">예금통장</p>			
-							<p class="fs-4 text-white px-3">3414-34-3321</p>
-							<p class="fs-4 text-white px-3">300,000,000원</p>
+						<div class="col d-flex justify-content-center" style="font-family: 'Dongle', sans-serif;">
+							<i class="fa-solid fa-money-check h1 px-3 text-white"></i>
+							<p class="h1 text-white px-3">예금통장</p>			
+							<p class="h1 text-white px-3">3414-34-3321</p>
+							<p class="h1 text-white px-3">300,000,000원</p>
 						</div>	
 					</div>
 	    		</div>
@@ -164,11 +168,11 @@
     		<div class="carousel-item">
     			<div class="d-flex justify-content-center">
 		    		<div class="rounded border border-dark bg-success" style="padding: 30px;">
-		    			<div class="col d-flex justify-content-center">
-							<i class="fa-solid fa-money-check fs-1 px-3 text-white"></i>
-							<p class="fs-4 text-white px-3">월급통장</p>			
-							<p class="fs-4 text-white px-3">3414-34-3321</p>
-							<p class="fs-4 text-white px-3">5,000,000원</p>
+		    			<div class="col d-flex justify-content-center" style="font-family: 'Dongle', sans-serif;">
+							<i class="fa-solid fa-money-check h1 px-3 text-white"></i>
+							<p class="h1 text-white px-3">월급통장</p>			
+							<p class="h1 text-white px-3">3414-34-3444</p>
+							<p class="h1 text-white px-3">30,000,000원</p>
 						</div>	
 		    		</div>
 	    		</div>
@@ -284,11 +288,11 @@
 	    	<div class="carousel-item">
 				<div class="d-flex justify-content-center">
 					<div class="rounded border border-dark bg-dark" style="padding: 30px;">
-						<div class="col d-flex justify-content-center">
-							<i class="fa-solid fa-money-check fs-1 px-3 text-white"></i>
-							<p class="fs-4 text-white px-3">밥값통장</p>			
-							<p class="fs-4 text-white px-3">3414-34-3141</p>
-							<p class="fs-4 text-white px-3">500,000원</p>
+						<div class="col d-flex justify-content-center" style="font-family: 'Dongle', sans-serif;">
+							<i class="fa-solid fa-money-check h1 px-3 text-white"></i>
+							<p class="h1 text-white px-3">밥값통장</p>			
+							<p class="h1 text-white px-3">3414-34-8661</p>
+							<p class="h1 text-white px-3">300,000원</p>
 						</div>	
 					</div>
 	    		</div>
