--- a/html/autoSend.html
+++ b/html/autoSend.html
@@ -9,6 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 	<!-- JqueryUi -->
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+	<!-- font-family: 'Dongle', sans-serif; -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header class="p-1 fixed-top bg-dark" id="header">
@@ -39,8 +43,8 @@
 	</header>
 	<div class="container-fluid text-center">
 		<form>
-			<div class="row-md-auto" style="padding: 200px;">
-				<h2 style="margin-bottom: 30px;">자동이체</h2>
+			<div class="row-md-auto" style="padding: 100px;">
+				<div class="fs-1" style="margin-bottom: 30px; font-family: 'Dongle', sans-serif;">자동이체</div>
 				<div class="col-md-auto" style="margin: 10px;">
 					<select id="selectAccount" class="form-select">
    						<option selected disabled>계좌선택</option>
