--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 	<!-- Fontawesome -->
 	<script src="https://kit.fontawesome.com/b05f67c88a.js" crossorigin="anonymous"></script>
+	<!-- font-family: 'Dongle', sans-serif; -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header class="p-1 fixed-top bg-dark" id="header">
@@ -47,10 +51,10 @@
 				<iframe width="1200" height="100%" src="https://www.youtube.com/embed/NJUjU9ALj4A?controls=0?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border-radius: 15px; margin: 50px;"></iframe>
 			</div>	
 		</div>
-		<div class="row-md d-flex justify-content-center" style="padding: 100px;">
+		<div class="row-md d-flex justify-content-center" style="padding: 100px; font-family: 'Dongle', sans-serif;">
 			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
-				<img src="img/influencer1.jpg" class="card-img-top" alt="...">
-				<div class="h4 text-center" style="margin-bottom: -15px; margin-top: 30px;">주식단테</div>
+				<img src="img/influencer1.jpg" class="card-img-top" alt="주식단테" style="margin-bottom: -15px;">
+				<div class="fs-1 text-center" style="margin-bottom: -20px; margin-top: 30px;">주식단테</div>
 				<div class="card-body d-flex justify-content-center align-items-end">
 					<div>
 						<a href="https://www.youtube.com/channel/UC6ij59Gy_HnqO4pFu9A_zgQ" style="text-decoration: none;" class="fs-1 px-2">
@@ -65,8 +69,8 @@
 				</div>
 		  	</div>
 			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
-				<img src="img/influencer2.jpg" class="card-img-top" alt="...">
-				<div class="h4 text-center" style="margin-bottom: -15px; margin-top: 30px;">삼프로TV</div>
+				<img src="img/influencer2.jpg" class="card-img-top" alt="삼프로TV" style="margin-bottom: -15px;">
+				<div class="fs-1 text-center" style="margin-bottom: -20px; margin-top: 30px;">삼프로TV</div>
 				<div class="card-body d-flex justify-content-center align-items-end">
 					<div>
 						<a href="https://www.youtube.com/channel/UC6ij59Gy_HnqO4pFu9A_zgQ" style="text-decoration: none;" class="fs-1 px-2">
@@ -81,8 +85,8 @@
 				</div>
 			</div>
 			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
-				<img src="img/influencer3.jpg" class="card-img-top" alt="...">
-				<div class="h4 text-center" style="margin-bottom: -15px; margin-top: 30px;">슈카월드</div>
+				<img src="img/influencer3.jpg" class="card-img-top" alt="슈카월드" style="margin-bottom: -15px;">
+				<div class="fs-1 text-center" style="margin-bottom: -20px; margin-top: 30px;">슈카월드</div>
 				<div class="card-body d-flex justify-content-center align-items-end">
 					<div>
 						<a href="https://www.youtube.com/channel/UC6ij59Gy_HnqO4pFu9A_zgQ" style="text-decoration: none;" class="fs-1 px-2">
@@ -97,8 +101,8 @@
 				</div>
 		  	</div>
 			  <div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
-				<img src="img/influencer4.jpg" class="card-img-top" alt="...">
-				<div class="h4 text-center" style="margin-bottom: -15px; margin-top: 30px;">테미녀</div>
+				<img src="img/influencer4.jpg" class="card-img-top" alt="테미녀" style="margin-bottom: -15px;">
+				<div class="fs-1 text-center" style="margin-bottom: -20px; margin-top: 30px;">테미녀</div>
 				<div class="card-body d-flex justify-content-center align-items-end">
 					<div>
 						<a href="https://www.youtube.com/channel/UC6ij59Gy_HnqO4pFu9A_zgQ" style="text-decoration: none;" class="fs-1 px-2">
@@ -113,8 +117,8 @@
 				</div>
 		  	</div>
 			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
-				<img src="img/influencer5.jpg" class="card-img-top" alt="...">
-				<div class="h4 text-center" style="margin-bottom: -15px; margin-top: 30px;">천덩이</div>
+				<img src="img/influencer5.jpg" class="card-img-top" alt="천덩이" style="margin-bottom: -15px;">
+				<div class="fs-1 text-center" style="margin-bottom: -20px; margin-top: 30px;">천덩이</div>
 				<div class="card-body d-flex justify-content-center align-items-end">
 					<div>
 						<a href="https://www.youtube.com/channel/UC6ij59Gy_HnqO4pFu9A_zgQ" style="text-decoration: none;" class="fs-1 px-2">
@@ -131,10 +135,10 @@
 		</div>	
 	</div>
 	<div class="container-fluid">
-		<div class="d-flex justify-content-center" id="news"></div>
+		<div class="d-flex justify-content-center" id="news">뉴스API</div>
 	</div>
 	<form>
-		<div class="modal fade bg-body-secondary" data-bs-theme="dark" id="signIn" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+		<div class="modal fade bg-body-secondary" data-bs-theme="white" id="signIn" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 	  		<div class="modal-dialog">
 	    		<div class="modal-content" style="width: 622px; height: 439px; padding: 50px;">
 	      			<div class="modal-header d-flex justify-content-around">
@@ -153,7 +157,7 @@
 		</div>
 	</form>
 	<form>
-		<div class="modal fade bg-body-secondary" data-bs-theme="dark" id="signUp" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" dialog aria-labelledby="staticBackdropLabel" aria-hidden="true">
+		<div class="modal fade bg-body-secondary" data-bs-theme="white" id="signUp" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" dialog aria-labelledby="staticBackdropLabel" aria-hidden="true">
 	  		<div class="modal-dialog">
 	    		<div class="modal-content" style="width: 622px; height: 700px; padding: 50px;">
 	      			<div class="modal-header d-flex justify-content-around">
