플루이드 제거

--- a/html/foreignStock.html
+++ b/html/foreignStock.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	<header class="fs-2 fixed-top bg-dark" id="header" style="font-family: 'Gamja Flower', cursive;">
-		<div class="container-fluid">
+		<div class="container">
       		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         		<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 align-items-center">
          	 		<li><a href="index.html" class="nav-link text-secondary fs-1">KOKOA BANK</a></li>
@@ -43,11 +43,10 @@
       		</div>
     	</div>
 	</header>
-	<div class="container-fluid" style="margin-top: 120px;">
-		<div class="h4 d-flex justify-content-center">해외 주식</div>
-		<div class="h4 d-flex justify-content-center">API</div>
+	<div class="container" style="margin-top: 120px;">
+		<div class="h4 d-flex justify-content-center">해외 주식 API</div>
 	</div>
-	<div class="container-fluid">
+	<div class="container">
   		<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     		<ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
     			<li><a href="#" class="nav-link px-2 text-secondary">KOKOA BANK</a></li>
