--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 	<header class="fs-2 fixed-top bg-dark" id="header" style="font-family: 'Gamja Flower', cursive;">
-		<div class="container-fluid">
+		<div class="container">
       		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         		<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 align-items-center">
          	 		<li><a href="index.html" class="nav-link text-secondary fs-1">KOKOA BANK</a></li>
@@ -49,7 +49,7 @@
       		</div>
     	</div>
 	</header>
-	<div class="container-fluid">
+	<div class="container">
 		<div class="row">
 			<div class="d-flex justify-content-center" style="padding: 33px; height: 600px; margin-top: 80px;">
 				<iframe width="1200" height="100%" src="https://www.youtube.com/embed/NJUjU9ALj4A?controls=0?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border-radius: 15px; margin: 50px;"></iframe>
@@ -138,8 +138,8 @@
 		  	</div>
 		</div>	
 	</div>
-	<div class="container-fluid">
-		<div class="d-flex justify-content-center" id="news">뉴스API</div>
+	<div class="container">
+		<div class="h4 d-flex justify-content-center" id="news">뉴스 API</div>
 	</div>
 	<form>
 		<div class="modal fade bg-body-secondary" data-bs-theme="white" id="signIn" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -203,7 +203,7 @@
 	  		</div>
 		</div>
 	</form>
-	<div class="container-fluid">
+	<div class="container">
   		<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     		<ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
     			<li><a href="#" class="nav-link px-2 text-secondary">KOKOA BANK</a></li>
