--- a/html/send.html
+++ b/html/send.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<header class="fs-2 fixed-top bg-dark" id="header" style="font-family: 'Gamja Flower', cursive;">
-		<div class="container-fluid">
+		<div class="container">
       		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         		<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 align-items-center">
          	 		<li><a href="index.html" class="nav-link text-secondary fs-1">KOKOA BANK</a></li>
@@ -47,7 +47,7 @@
       		</div>
     	</div>
 	</header>
-	<div class="container-fluid text-center">
+	<div class="container text-center">
 		<form>
 			<div class="row-md-auto" style="padding: 100px;">
 				<div class="fs-1" style="margin-bottom: 30px; font-family: 'Dongle', sans-serif;">이체</div>
@@ -84,7 +84,7 @@
 	    	<button class="btn btn-outline-danger">취소</button>   		
 	    </div>
 	</div>
-	<div class="container-fluid">
+	<div class="container">
   		<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     		<ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
     			<li><a href="#" class="nav-link px-2 text-secondary">KOKOA BANK</a></li>
