이름 조금 수정

--- a/html/account.html
+++ b/html/account.html
@@ -58,7 +58,7 @@
 					<div class="rounded border border-dark bg-secondary" style="padding: 30px;">
 						<div class="col d-flex justify-content-center" style="font-family: 'Dongle', sans-serif;">
 							<i class="fa-solid fa-money-check h1 px-3 text-white"></i>
-							<p class="h1 text-white px-3">예금통장</p>			
+							<p class="h1 text-white px-3">적금통장</p>			
 							<p class="h1 text-white px-3">3414-34-3321</p>
 							<p class="h1 text-white px-3">300,000,000원</p>
 						</div>	
@@ -178,7 +178,7 @@
 		    		<div class="rounded border border-dark bg-success" style="padding: 30px;">
 		    			<div class="col d-flex justify-content-center" style="font-family: 'Dongle', sans-serif;">
 							<i class="fa-solid fa-money-check h1 px-3 text-white"></i>
-							<p class="h1 text-white px-3">월급통장</p>			
+							<p class="h1 text-white px-3">예금통장</p>			
 							<p class="h1 text-white px-3">3414-34-3444</p>
 							<p class="h1 text-white px-3">30,000,000원</p>
 						</div>	
@@ -298,7 +298,7 @@
 					<div class="rounded border border-dark bg-dark" style="padding: 30px;">
 						<div class="col d-flex justify-content-center" style="font-family: 'Dongle', sans-serif;">
 							<i class="fa-solid fa-money-check h1 px-3 text-white"></i>
-							<p class="h1 text-white px-3">밥값통장</p>			
+							<p class="h1 text-white px-3">입출금통장</p>			
 							<p class="h1 text-white px-3">3414-34-8661</p>
 							<p class="h1 text-white px-3">300,000원</p>
 						</div>	
