table, input size 조절

--- a/html/account.html
+++ b/html/account.html
@@ -66,7 +66,7 @@
 	    			<a class="btn btn-outline-primary" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountCorrect">계좌수정</a>
 	    		</div>
 	    		<br>
-	    		<div class="d-flex justify-content-start">
+	    		<div class="d-flex justify-content-center" style="margin-left: -17.4%;">
 	    			<button type="button" class="btn btn-danger col-md-auto" id="btnSearch">
 						<i class="fa-solid fa-magnifying-glass"></i>
 					</button>
@@ -85,7 +85,7 @@
     					<input type="text" class="form-control datepicker dateFinish" placeholder="종료일">
   					</div> 
 	    		</div>
-	    		<table class="table">
+	    		<table class="table" style="width: 700px; margin: auto;">
 				  	<thead>
 				    	<tr>
 				      		<th scope="col">날짜</th>
@@ -186,7 +186,7 @@
 	    			<a class="btn btn-outline-primary" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountCorrect">계좌수정</a>
 	    		</div>
 	    		<br>
-	    		<div class="d-flex justify-content-start">
+	    		<div class="d-flex justify-content-center" style="margin-left: -17.4%;">
 	    			<button type="button" class="btn btn-danger col-md-auto" id="btnSearch">
 						<i class="fa-solid fa-magnifying-glass"></i>
 					</button>
@@ -205,7 +205,7 @@
     					<input type="text" class="form-control datepicker dateFinish" placeholder="종료일">
   					</div> 
 	    		</div>
-	    		<table class="table">
+	    		<table class="table" style="width: 700px; margin: auto;">
 				  	<thead>
 				    	<tr>
 				      		<th scope="col">날짜</th>
@@ -306,7 +306,7 @@
 	    			<a class="btn btn-outline-primary" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountCorrect">계좌수정</a>
 	    		</div>
 	    		<br>
-	    		<div class="d-flex justify-content-start">
+	    		<div class="d-flex justify-content-center" style="margin-left: -17.4%;">
 	    			<button type="button" class="btn btn-danger col-md-auto" id="btnSearch">
 						<i class="fa-solid fa-magnifying-glass"></i>
 					</button>
@@ -325,7 +325,7 @@
     					<input type="text" class="form-control datepicker dateFinish" placeholder="종료일">
   					</div> 
 	    		</div>
-	    		<table class="table">
+	    		<table class="table" style="width: 700px; margin: auto;">
 				  	<thead>
 				    	<tr>
 				      		<th scope="col">날짜</th>
@@ -410,11 +410,11 @@
 				</table>
 	    	</div>
 	  	</div>
-	  	<button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev" style="width: 32px; height: 32px; top: 50%; transform: translateY(-64px);">
+	  	<button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev" style="width: 32px; height: 32px; top: 50%; left: 20%; transform: translateY(-64px);">
 	    	<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 	    	<span class="visually-hidden">Previous</span>
 	  	</button>
-	  	<button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next" style="width: 32px; height: 32px; top: 50%; transform: translateY(-64px);">
+	  	<button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next" style="width: 32px; height: 32px; top: 50%; right: 20%; transform: translateY(-64px);">
 	    	<span class="carousel-control-next-icon" aria-hidden="true"></span>
 	    	<span class="visually-hidden">Next</span>
 	  	</button>
