--- a/html/autoSend.html
+++ b/html/autoSend.html
@@ -47,9 +47,9 @@
 	</header>
 	<div class="container text-center">
 		<form>
-			<div class="row-md-auto" style="padding: 100px;">
+			<div class="row-md" style="padding: 100px;">
 				<div class="fs-1" style="margin-bottom: 30px; font-family: 'Dongle', sans-serif;">자동이체</div>
-				<div class="col-md-auto" style="margin: 10px;">
+				<div class="col-5" style="margin: 10px auto;">
 					<select id="selectAccount" class="form-select">
    						<option selected disabled>계좌선택</option>
    						<option>1번</option>
@@ -57,28 +57,28 @@
 						<option>3번</option>
    					</select>
 				</div>
-				<div class="col-md-auto" style="margin: 10px;">
+				<div class="col-5" style="margin: 10px auto;">
 					<input type="text" id="balance" class="form-control" placeholder="잔액" disabled>
 				</div>
-				<div class="col-md-auto" style="margin: 10px;">
+				<div class="col-5" style="margin: 10px auto;">
 					<input type="text" class="form-control" placeholder="계좌번호">
 				</div>
-				<div class="col-md-auto" style="margin: 10px;">
+				<div class="col-5" style="margin: 10px auto;">
 					<input type="text" class="form-control" placeholder="금액">
 				</div>
-				<div class="col-md-auto" style="margin: 10px;">
+				<div class="col-5" style="margin: 10px auto;">
 					<input type="text" class="form-control" placeholder="받는사람 이름">
 				</div>
-				<div class="col-md-auto" style="margin: 10px;">
+				<div class="col-5" style="margin: 10px auto;">
 					<input type="text" class="form-control" placeholder="입금자명">
 				</div>
-				<div class="col-md-auto" style="margin: 10px;">
+				<div class="col-5" style="margin: 10px auto;">
 					<input type="password" class="form-control" placeholder="비밀번호">
 				</div>
-				<div class="col-md-auto" style="margin: 10px;">
+				<div class="col-5" style="margin: 10px auto;">
 					<input type="text" class="form-control datepicker" placeholder="자동이체 시작날짜">
 				</div>
-				<div class="col-md-auto" style="margin: 10px;">
+				<div class="col-5" style="margin: 10px auto;">
 					<input type="text" class="form-control datepicker" placeholder="자동이체 종료날짜">
 				</div>
 			</div>
