--- a/html/send.html
+++ b/html/send.html
@@ -45,9 +45,9 @@
 	</header>
 	<div class="container text-center">
 		<form>
-			<div class="row-md-auto" style="padding: 100px;">
+			<div class="row-md" style="padding: 100px;">
 				<div class="fs-1" style="margin-bottom: 30px; font-family: 'Dongle', sans-serif;">이체</div>
-				<div class="col-md-auto" style="margin: 10px;">
+				<div class="col-5" style="margin: 10px auto;">
 					<select id="selectAccount" class="form-select">
    						<option selected disabled>계좌선택</option>
    						<option>1번</option>
@@ -55,22 +55,22 @@
 						<option>3번</option>
    					</select>
 				</div>
-				<div class="col-md-auto" style="margin: 10px;">
+				<div class="col-5" style="margin: 10px auto;">
 					<input type="text" id="balance" class="form-control" placeholder="잔액" disabled>
 				</div>
-				<div class="col-md-auto" style="margin: 10px;">
+				<div class="col-5" style="margin: 10px auto;">
 					<input type="text" class="form-control" placeholder="계좌번호">
 				</div>
-				<div class="col-md-auto" style="margin: 10px;">
+				<div class="col-5" style="margin: 10px auto;">
 					<input type="text" class="form-control" placeholder="금액">
 				</div>
-				<div class="col-md-auto" style="margin: 10px;">
+				<div class="col-5" style="margin: 10px auto;">
 					<input type="text" class="form-control" placeholder="받는사람 이름">
 				</div>
-				<div class="col-md-auto" style="margin: 10px;">
+				<div class="col-5" style="margin: 10px auto;">
 					<input type="text" class="form-control" placeholder="입금자명">
 				</div>
-				<div class="col-md-auto" style="margin: 10px;">
+				<div class="col-5" style="margin: 10px auto;">
 					<input type="password" class="form-control" placeholder="비밀번호">
 				</div>
 			</div>
